<resources>
    <string name="app_name" translatable="false">Enerview</string>
    <string name="user_agreement_and_privacy_policy">用户协议及隐私政策</string>
    <string name="privacy_dialog_content">Enerview旨在保护您的数据隐私与安全的基础上，帮助您高效管理电站。请仔细阅读并充分理解一下条款后再点击同意。</string>
    <string name="click_agree">点击同意即代表您已阅读并同意%s&amp;%s。</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="user_agreement_2">用户协议</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="privacy_policy_2">隐私政策</string>
    <string name="disagree">不同意</string>
    <string name="agree">同意</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="privacy_dialog_tip">不同意协议无法提供服务哦~</string>
    <string name="info_space">体验馆>></string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="loading">加载中...</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="agree_company_user_agreement">同意本公司各项%s&amp;%s</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="country_or_area">国家/地区</string>
    <string name="unselected_country_or_area">未选择国家/地区</string>
    <string name="please_select_country_or_area">请选择国家或者地区&#160;&#160;>&#160;</string>
    <string name="input_password_again">重复输入密码</string>
    <string name="password_length_not_enough">密码不少于6位字符</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="please_input_installer_no">请输入安装商编号</string>
    <string name="confirm_password">确认密码</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="finish">完成</string>
    <string name="installer_no">安装商编号</string>
    <string name="verify_format">%s验证</string>
    <string name="sent_verify_code_format">已发送验证码到%s</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="verify_code">验证码</string>
    <string name="please_verify_code">请输入验证码</string>
    <string name="unselected_country">未选择国家</string>
    <string name="user_name_cant_empty">用户名不能为空</string>
    <string name="password_cant_empty">密码不能为空</string>
    <string name="passwords_are_inconsistent">两次密码不一致</string>
    <string name="password_cannot_be_less_than_6_digits">密码不能少于6位数</string>
    <string name="no_phone_number">未填写手机号码</string>
    <string name="no_email">未填写邮箱</string>
    <string name="please_check_agree_agreement">请勾选同意协议</string>
    <string name="second_after_send">%ds后重新发送</string>
    <string name="synopsis">总览</string>
    <string name="plant">电站</string>
    <string name="service">服务</string>
    <string name="mine">我的</string>
    <string name="i">我</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="message_center">消息中心</string>
    <string name="save">保存</string>
    <string name="personal_avatar">个人头像</string>
    <string name="language">语言</string>
    <string name="modify_password">修改密码</string>
    <string name="cancel_account">注销账号</string>
    <string name="system_language">系统语言</string>
    <string name="logout_current_account">退出当前账号</string>
    <string name="version_name_format">版本号：%s</string>
    <string name="company_website">公司官网</string>
    <string name="sms_find_back">短信找回</string>
    <string name="email_find_back">邮箱找回</string>
    <string name="find_back_password">找回密码</string>
    <string name="please_fill_in_info">请填写以下信息</string>
    <string name="next_step">下一步</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="change_phone">更换手机号</string>
    <string name="change_email">更换邮箱</string>
    <string name="web">网页</string>
    <string name="now_cancel">立即注销</string>
    <string name="cancel_account_tip">注销后，你将无法使用当前帐号，包括账号的数据也将被清除，无法找回。</string>
    <string name="notice_for_account_cancellation_foramt">注销前请详细阅读%s</string>
    <string name="notice_for_account_cancellation">《注销账号须知》</string>
    <string name="follow_system">跟随系统</string>
    <string name="tip">提示</string>
    <string name="please_to_app_setting_open_permission">请到应用设置中打开权限</string>
    <string name="need_to_open_location_service">需要打开定位服务</string>
    <string name="please_to_setting_page_location_service">请到设置页面打开定位服务</string>
    <string name="take_a_picture">拍照</string>
    <string name="from_the_album">从相册选取</string>
    <string name="please_select">请选择</string>
    <string name="select_unit">选择单位</string>
    <string name="to_set">去设置</string>
    <string name="app_want_to_visit_format">"%s"想访问您的%s</string>
    <string name="storage_photo_album">存储（相册）</string>
    <string name="camera">相机</string>
    <string name="photo_album">相册</string>
    <string name="location">位置</string>
    <string name="to_app_set_permission_format">您未允许%s获得你的%s权限，您可在应用设置中开启</string>
    <string name="install_date">安装日期</string>
    <string name="please_input_plant_or_sn">请输入电站名称或电站设备中的序列号</string>
    <string name="add_plant">添加电站</string>
    <string name="edit_plant">编辑电站</string>
    <string name="delete_plant">删除电站</string>
    <string name="plant_manage">电站管理</string>
    <string name="delete_plant_confirm">是否删除电站？</string>
    <string name="device_count">设备数量</string>
    <string name="total_component_power">组件总功率</string>
    <string name="current_power">实时功率</string>
    <string name="slash_format">%s/%s</string>
    <string name="service_manual">使用手册</string>
    <string name="installation_video">安装视频</string>
    <string name="plant_name">电站名称</string>
    <string name="plant_name_format">电站名称:%s</string>
    <string name="plant_address">电站地址</string>
    <string name="map_for_choosing">地图选点</string>
    <string name="auto_fetch">自动获取</string>
    <string name="please_input_plant_name">请填写电站名称</string>
    <string name="please_select_install_date">请选择安装日期</string>
    <string name="please_select_country_or_area_2">请选择国家/地区</string>
    <string name="please_select_city">请选择城市</string>
    <string name="please_input_detail_address">请输入详细地址</string>
    <string name="timezone">时区</string>
    <string name="please_select_timezone">请选择时区</string>
    <string name="please_input_total_component_power">请输入组件总功率</string>
    <string name="plant_type">电站类型</string>
    <string name="commercial_plant">商用电站</string>
    <string name="capital_gains">资金收益</string>
    <string name="please_input_the_feedin_tariff">请输入1kWh的上网电价</string>
    <string name="plant_image">电站图片</string>
    <string name="please_upload_plant_image">请上传电站图片</string>
    <string name="total_component_power_2">组件总功率(W)</string>
    <string name="add_collector">添加采集器</string>
    <string name="serial_number">序列号</string>
    <string name="serial_number_format">序列号:%s</string>
    <string name="check_code">校验码</string>
    <string name="serial_number_sn">序列号(SN)</string>
    <string name="check_code_sn">校验码(SN)</string>
    <string name="please_input_collector_sn">请输入采集器序列号</string>
    <string name="please_input_collector_check_code">请输入采集器校验码</string>
    <string name="input_collector_sn_and_check_code">输入采集器序列号与校验码</string>
    <string name="serial_number_not_null">序列号不能为空</string>
    <string name="check_code_not_null">校验码不能为空</string>
    <string name="scan">扫一扫</string>
    <string name="all">全部</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="trouble">故障</string>
    <string name="all_format">全部(%d)</string>
    <string name="online_format">在线(%d)</string>
    <string name="offline_format">离线(%d)</string>
    <string name="trouble_format">故障(%d)</string>
    <string name="nothing_plant_format">无%s电站</string>
    <string name="today_generate_electricity">今日发电</string>
    <string name="month_generate_electricity">当月发电</string>
    <string name="total_generate_electricity">累计发电</string>
    <string name="today_generate_electricity_format">今日发电:%s</string>
    <string name="total_generate_electricity_format">累计发电:%s</string>
    <string name="energy_info">能源概况</string>
    <string name="current_day">当日</string>
    <string name="total">累计</string>
    <string name="photovoltaic_output">光伏产出</string>
    <string name="battery_charge">电池充电</string>
    <string name="battery_discharge">电池放电</string>
    <string name="load_consumption">负载消耗</string>
    <string name="feed_into_the_grid">馈入电网</string>
    <string name="take_electricity_grid">电网取电</string>
    <string name="grid_total_power">电网总耗电量</string>
    <string name="grid_connected_inverter_output">并网逆变器产出</string>
    <string name="grid_connected_inverter">并网逆变器</string>
    <string name="device_type">设备类型</string>
    <string name="device_type_format">设备类型:%s</string>
    <string name="device_sn">设备序列号</string>
    <string name="input_power_format">输入功率:%s</string>
    <string name="output_power_format">输出功率:%s</string>
    <string name="output_power">输出功率</string>
    <string name="load_power_format">负载功率:%s</string>
    <string name="discharge_power_format">放电功率:%s</string>
    <string name="current_power_format">当前功率:%s</string>
    <string name="delete">删除</string>
    <string name="my_devices">我的设备</string>
    <string name="sn_format">序列号:%s</string>
    <string name="model_format">型号:%s</string>
    <string name="hps">HPS</string>
    <string name="pcs">PCS</string>
    <string name="pbd">PBD</string>
    <string name="bms">BMS</string>
    <string name="mbms">MBMS</string>
    <string name="bcu_bms">BCU_BMS</string>
    <string name="combiner">Combiner</string>
    <string name="collector">采集器</string>
    <string name="charging">充电中</string>
    <string name="discharging">放电中</string>
    <string name="connect_status_format">连接状态:%s</string>
    <string name="connected">已连接</string>
    <string name="disconnect">未连接</string>
    <string name="soc_format">SOC:%d</string>
    <string name="update_interval_format">更新间隔:%s分钟</string>
    <string name="last_update_time_format">最后更新时间:%s</string>
    <string name="see_more">查看更多</string>
    <string name="please_input_device_sn_or_alias">请输入设备序列号或别名</string>
    <string name="all_params">全部参数</string>
    <string name="kwh">kWh</string>
    <string name="mwh">MWh</string>
    <string name="kwp">kWp</string>
    <string name="mwp">MWp</string>
    <string name="kw">kW</string>
    <string name="mw">MW</string>
    <string name="hz">Hz</string>
    <string name="kva">KVA</string>
    <string name="kvar">KVar</string>
    <string name="v">V</string>
    <string name="a">A</string>
    <string name="kg">kg</string>
    <string name="t">t</string>
    <string name="temperature_unit">℃</string>
    <string name="min">Min</string>
    <string name="output_voltage">输出电压</string>
    <string name="output_frequency">输出频率</string>
    <string name="environment_temperature">环境温度</string>
    <string name="startup_self_test_time">开机自检时间</string>
    <string name="load_time_power">负载视在功率</string>
    <string name="load_active_power">负载有功功率</string>
    <string name="load_reactive_power">负载无功功率</string>
    <string name="load_power_factor">负载功率因素</string>
    <string name="generate_power">发电功率</string>
    <string name="battery_charge_day_time">电池日充电时间</string>
    <string name="bus_voltage">母线电压</string>
    <string name="parallel_monitor_judgment_flag">并机监控判断标志</string>
    <string name="bypass_apparent_power">旁路视在功率</string>
    <string name="bypass_active_power">旁路有功功率</string>
    <string name="bypass_reactive_power">旁路无功功率</string>
    <string name="pv_power">PV功率</string>
    <string name="pv_power_format">PV功率:%s</string>
    <string name="pv_power_1">PV1功率</string>
    <string name="pv_power_2">PV2功率</string>
    <string name="pv_power_3">PV3功率</string>
    <string name="pv_power_4">PV4功率</string>
    <string name="pv_power_5">PV5功率</string>
</resources>