<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.mine.activity.SettingActivity">

    <com.growatt.lib.view.StatusBarHeightView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white" />

    <com.growatt.atess.view.TitleBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/setting" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_default_avatar" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/personal_avatar"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/color_white"
        android:divider="@drawable/line_divider"
        android:orientation="vertical"
        android:showDividers="middle">

        <com.growatt.atess.ui.mine.view.SettingItemView
            android:id="@+id/item_user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:itemName="@string/username"
            app:showRightIcon="false"
            app:showSubName="true"
            app:textSubNameColor="@color/text_gray_bb" />

        <com.growatt.atess.ui.mine.view.SettingItemView
            android:id="@+id/item_language"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:itemName="@string/language"
            app:showSubName="true" />

        <com.growatt.atess.ui.mine.view.SettingItemView
            android:id="@+id/item_modify_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:itemName="@string/modify_password" />

        <com.growatt.atess.ui.mine.view.SettingItemView
            android:id="@+id/item_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:itemName="@string/phone"
            app:showSubName="true" />

        <com.growatt.atess.ui.mine.view.SettingItemView
            android:id="@+id/item_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:itemName="@string/email"
            app:showSubName="true" />

        <com.growatt.atess.ui.mine.view.SettingItemView
            android:id="@+id/item_installer_no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:itemName="@string/installer_no"
            app:showSubName="true" />

        <com.growatt.atess.ui.mine.view.SettingItemView
            android:id="@+id/item_cancel_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:itemName="@string/cancel_account"
            app:showSubName="true" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_logout"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="36dp"
        android:text="@string/logout_current_account"
        android:textSize="@dimen/text_medium" />

</LinearLayout>
