<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/default_dialog_background"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context="com.growatt.atess.launch.fragment.UserAgreementDialog">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/user_agreement_and_privacy_policy"
        android:textSize="@dimen/text_large"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/privacy_dialog_content"
            android:textColor="@color/text_black" />

        <TextView
            android:id="@+id/tv_span"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/click_agree"
            android:textColor="@color/text_black" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="24dp"
        android:background="@color/color_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="14dp"
        android:paddingEnd="8dp"
        android:paddingBottom="14dp">

        <TextView
            android:id="@+id/disagree_or_confirm"
            android:layout_width="118dp"
            android:layout_height="40dp"
            android:background="@drawable/button_gray_background"
            android:gravity="center"
            android:text="@string/disagree"
            android:textColor="@color/text_gray" />

        <TextView
            android:id="@+id/agree_or_cancel"
            android:layout_width="118dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_red_background"
            android:gravity="center"
            android:text="@string/agree"
            android:textColor="@color/text_white" />

    </RelativeLayout>

</LinearLayout>