<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/default_dialog_background"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context="ui.mine.fragment.VerifyCodeDialog">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/verify_format"
        android:textSize="@dimen/text_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_sent_verify_code_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sent_verify_code_format"
        android:textColor="@color/text_black" />

    <TextView
        android:id="@+id/tv_phone_or_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_very_large"
        android:textStyle="bold"
        tools:text="13726224536" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/please_verify_code"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/tv_send_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_border_background"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_clear"
            android:text="@string/send_verify_code"
            android:textSize="@dimen/text_small" />

    </LinearLayout>

    <View
        android:id="@+id/view_verify_code_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp">

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="106dp"
            android:layout_height="36dp"
            android:background="@drawable/button_gray_background"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/text_gray" />

        <Button
            android:id="@+id/bt_confirm"
            android:layout_width="106dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_red_background"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/text_white" />

    </RelativeLayout>

</LinearLayout>