<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.mine.activity.FindBackPasswordActivity">

    <com.growatt.lib.view.StatusBarHeightView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white" />

    <com.growatt.atess.view.TitleBarLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showRightText="true"
        app:titleText="@string/find_back_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/please_fill_in_info"
        android:textColor="@color/text_gray_99"
        android:textSize="@dimen/text_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:padding="36dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_phone_or_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/please_input_email"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_send_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_border_background"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:src="@drawable/ic_clear"
                android:text="@string/send_verify_code"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

        <View
            android:id="@+id/view_phone_or_email_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent" />

        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/please_verify_code"
            android:inputType="number"
            android:maxLength="6"
            android:paddingBottom="12dp"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_verify_code_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/bt_next_step"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="36dp"
            android:text="@string/next_step"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>
</LinearLayout>
